# corss

./: README.md  args.gn  build_config.json  buildozer.spec  config.json  customize.sh  gradle.properties  gradlew  libfrida-gadget.config.json  local_setup.sh  main.py  module.prop  service.sh  settings.gradle  settings.gradle.kts  wrangler.toml
.circleci/: config.yml
.github/workflows/: build-apk.yml  build-browser.yml  build.yml  main.yml
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/myname/browser/: MainActivity.kt
app/src/main/java/com/vphone/emulator/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
hooks/: stealth_hook.js
jni/: Android.mk  main.cpp  zygisk.h
lib/: frida-gadget.config
patches/: libchrome-arm64.patch
scripts/: build-arm64.sh  package_apk.sh
src/: index.ts
web/: index.html
