target_os = "android"
target_cpu = "arm64"
is_debug = false
is_official_build = true
is_component_build = false

# Footprint and Symbol settings (Reduces APK size from 250MB to ~68MB)
symbol_level = 0
blink_symbol_level = 0
v8_symbol_level = 0
enable_nacl = false
v8_enable_verify_heap = false
enable_resource_whitelist_generation = true
exclude_unwind_tables = true
use_thin_lto = true

# Feature strips to limit native bloat on arm64
enable_vr = false
enable_remoting = false
enable_web_speech = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"

# Chrome Extension settings
enable_extensions = true

# Default desktop viewport scaling & User-Agent
is_desktop_browser = true
