target_os = "android"
target_cpu = "arm64"
android_channel = "stable"

# Optimasi Agresif Cloud (Mencegah Kehabisan Storage/RAM)
is_debug = false
is_official_build = true
symbol_level = 0
blink_symbol_level = 0
v8_symbol_level = 0
strip_absolute_paths_from_debug_symbols = true

# Matikan Komponen Berat & Google Bloatware
enable_nacl = false
enable_remoting = false
use_official_google_api_keys = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_vr = false
enable_web_speech = false

# Penghematan Ruang Disk Maksimal & Footprint
optimize_for_size = true
is_component_build = false
disable_fieldtrial_testing_config = true
exclude_unwind_tables = true
use_thin_lto = true

# Chrome Extension & Desktop Default settings
enable_extensions = true

# Default desktop viewport scaling & User-Agent
is_desktop_browser = true
